Added profile removing

--- a/OscVrcMaui/OscVrcMaui.csproj
+++ b/OscVrcMaui/OscVrcMaui.csproj
@@ -90,6 +90,10 @@
 	     <Reference Include="Mono.Android.Export" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Media\" />
+	</ItemGroup>
+
 	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerTimeoutExceptionOscVrcMauiHideInfoBar="True" /></VisualStudio></ProjectExtensions>
 
 </Project>
